--- a/index.html
+++ b/index.html
@@ -4,9 +4,63 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="header">
+    <div class="logo">
+      Header logo
+    </div>
+    <ul class="navigation">
+      <li>header link one</li>
+      <li>header link two</li>
+      <li>header link three</li>
+    </ul>
+  </div>
+  <div class="main-top">
+    <div>
+    <h1>This website is awesome</h1>
+    <p>This website has some subtext that goes here under the main ittle. It's a smaller font and the color is lower contrast.</p>
+    <button class="sign-up-button">Sign up</button>
+    </div>
+    <div class="image-placeholder">
+      This is a placeholder for an image
+    </div>
+  </div>
+  <div class="main-middle">
+    <h2>Some random information.</h2>
+    <div class="container"> 
+
+      <div class="rounded-box">
+        <div class="box"></div>     
+        <p>this is some subtext under an illustration or an image</p>
+      </div>
+      <div class="rounded-box">    
+        <div class="box"></div>    
+        <p>this is some subtext under an illustration or an image</p>
+      </div>
+      <div class="rounded-box">   
+        <div class="box"></div>     
+        <p>this is some subtext under an illustration or an image</p>
+      </div>
+
+      <div class="rounded-box">
+        <div class="box"></div>    
+        <p>this is some subtext under an illustration or an image</p>
+      </div>
+
+    </div>
+  </div>
+  <div class="main-bottom">
+    This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will read it. Who knows? All I know is that it looks nice.
+    <div class="quote-author">Thor, God of Thunder</div>
+  </div>
+  <div class="call-to-action">
+    <h3>Call to action! It's time!</h3>
+    Sign-up for our product by clicking on that button right over there!
+    <button>Sign up</button>
+  </div>
 </body>
 </html>
