Complete CSS and HTML design

--- a/index.html
+++ b/index.html
@@ -54,13 +54,20 @@
     </div>
   </div>
   <div class="main-bottom">
-    This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will read it. Who knows? All I know is that it looks nice.
+    <p class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space or maybe people will read it. Who knows? All I know is that it looks nice.</p>
     <div class="quote-author">Thor, God of Thunder</div>
   </div>
+  <div class="call-container">
   <div class="call-to-action">
-    <h3>Call to action! It's time!</h3>
-    Sign-up for our product by clicking on that button right over there!
+    <div>
+      <h3>Call to action! It's time!</h3>
+      <p>Sign-up for our product by clicking on that button right over there!</p>
+    </div>
     <button>Sign up</button>
+  </div>
+  </div>
+  <div class="footer">
+    Copyright &copy Carter Coding 2023
   </div>
 </body>
 </html>
