--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-  <title>Document</title>
+  <title>Carter Coding Landing Page</title>
 </head>
 <body>
   <div class="header">
